v1.8

* Added option to enable/disable visual edit boxes

v1.7

Extension

* New icon state. Blue=Waiting, Green=In Progress, Red=Error
* Improved mouse-over text for icon to give more useful feedback

edit-server.el

* Move all frame customisation into edit-server-new-frame-alist
* Don't ask user before closing emacs and network process
* Just skip creating new network process if it's already running
* Make sure edit buffer is selected on new frames
* Prompt window manager to bring new frames to the top of the stack (X windows only)
* Enable multi-byte mode on edit buffers for better unicode handling
* Explicitly fail on XEmacs if make-network-process isn't found (XEmacs patches welcome)

v1.6

Extension

* Send the page URL to the edit server via x-url header
* Options page: direct people to Emacs Wiki page for gory extras
* Make Double Click to Edit a selectable option
* Make Keyboard Shortcut to Edit a selectable option
* Don't pass edit ID in URL, but in header as x-id (like x-url)

edit-server.el

* Fix edit-server-kill-client (passed process not buffer)
* Fix unkillable zombie buffers created by a closed browser
* Name buffer based on x-url if it exists
* Workaround make-frame-on-display bug on Aquamacs

v1.5

Extension

* Clean-up and streamline the text tagging code
* Process sub FRAMEs and IFRAMEs looking for text boxes
* Handle textareas that have been "cloned" by Javascript - fixes Google Groups
* Generate user feedback if "edit focused area" failed
* Skip textareas with spell-checking disabled (usually email address boxes)
* Make Alt-Enter in focused area generate an edit request (patches to make it configurable welcome!)
* Updates to help text in Options

edit-server.el

* Allow more customisation of the pop-up frame
* Allow optional binding to a non-local IP address
* Updates to help text in server code.

v1.4

Extension

* Added proper Emacs icon for extension
* Added options page with instructions and option to change port