@@ -1,6 +1,7 @@
 v1.8
 
 * Added option to enable/disable visual edit boxes
+* Improved feedback as editable elements come in and out of focus
 
 v1.7
 
